<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">


    <ImageView
        android:id="@+id/headerBackgroundThirdActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header_background"
        android:contentDescription="@string/headerBackgroundThirdActivity"
        android:transitionName="backgroundImageTransition"
        tools:targetApi="lollipop"/>

    <ImageView
        android:id="@+id/backArrowThirdActivity"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/backArrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow" />

    <ScrollView
        android:id="@+id/scrollViewThirdActivity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBackgroundThirdActivity"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/thirdActivityLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/thirdActivityLinearLayoutHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helloThere"
                android:textSize="40sp"
                android:gravity="center"
                android:textStyle="italic"
                android:textColor="@color/colorPrimary"
                />

            <LinearLayout
                android:id="@+id/thirdActivityRatingBarLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                >

                <RatingBar
                    android:id="@+id/secondActivityRatingBarOne"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:max="5"
                    android:numStars="5"
                    android:progressBackgroundTint="#7F6A21"
                    android:progressTint="@color/colorAccent"
                    android:rating="4.71"
                    android:stepSize="0.5"
                    tools:targetApi="lollipop" />

                <TextView
                    android:id="@+id/secondActivityTextViewRatingOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/photoOneRatingScore"
                    android:textColor="@color/colorPrimary"
                    android:textSize="27sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/secondActivityTextViewRatingTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photoOneRatingNumber"
                    android:textColor="@color/colorPrimary"
                    android:textSize="27sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <TextView
                android:id="@+id/thirdActivityTitleOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/thirdActivityTitleOne"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="italic"
                />

            <TextView
                android:id="@+id/thirdActivityTextOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thirdActivityTextOne"
                android:textSize="20sp"
                android:textStyle="italic"
                android:gravity="center"/>

            <TextView
                android:id="@+id/thirdActivityTitleTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/thirdActivityTitleTwo"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="italic"
                />

            <TextView
                android:id="@+id/thirdActivityTextTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thirdActivityTextTwo"
                android:textSize="20sp"
                android:textStyle="italic"
                android:gravity="center"/>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:height="60dp"
                android:text="@string/thirdActivityButton"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:textSize="20sp"
                android:letterSpacing="0.3"
                android:background="@drawable/custom_button"
                android:drawableRight="@drawable/ic_steps"
                android:drawableEnd="@drawable/ic_steps"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                tools:targetApi="lollipop" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>