<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:background="@drawable/background"
    android:transitionName="backgroundImageTransition"
    tools:targetApi="lollipop">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/backArrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow" />

    <TextView
        android:id="@+id/secondTextViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/photoOneTitle"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/secondActivityDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="148dp"
        android:alpha="0.7"
        android:gravity="center_horizontal"
        android:text="@string/secondActivityDescription"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/secondActivityDescription"
        app:layout_constraintStart_toStartOf="@+id/secondActivityDescription"
        app:layout_constraintTop_toBottomOf="@+id/secondActivityDescription">

        <RatingBar
            android:id="@+id/secondActivityRatingBarOne"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:max="5"
            android:numStars="5"
            android:progressTint="@color/colorAccent"
            android:progressBackgroundTint="#7F6A21"
            android:rating="4.71"
            android:stepSize="0.5"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/secondActivityTextViewRatingOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/photoOneRatingScore"
            android:textColor="@color/white"
            android:textSize="27sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/secondActivityTextViewRatingTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photoOneRatingNumber"
            android:textColor="@color/white"
            android:textSize="27sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/secondUpArrow"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/ic_up_arrow"
        android:contentDescription="@string/secondUpArrow" />

    <TextView
        android:id="@+id/moreDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/moreDetails"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/secondUpArrow"
        app:layout_constraintStart_toStartOf="@+id/secondUpArrow"
        app:layout_constraintTop_toBottomOf="@+id/secondUpArrow" />

</androidx.constraintlayout.widget.ConstraintLayout>